Closed
Bug 578667
Opened 15 years ago
Closed 15 years ago
Text highlighting with dragging selection was not performed when mouse is outside of frame
Categories
(Core :: DOM: Selection, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: alice0775, Assigned: enndeakin)
References
Details
(Keywords: regression)
Attachments
(3 files, 1 obsolete file)
User-Agent: Mozilla/5.0 (Windows; Windows NT 6.1; WOW64; en-US; rv:2.0b2pre) Gecko/20100714 Firefox/4.0b2pre ID:20100714040818
Build Identifier: Mozilla/5.0 (Windows; Windows NT 6.1; WOW64; en-US; rv:2.0b2pre) Gecko/20100714 Firefox/4.0b2pre ID:20100714040818
Text highlighting with dragging selection was not performed when mouse is outside of frame.
Text highlighting is not carried out unless a mouse moves.
Reproducible: Always
Steps to Reproduce:
1. Start Minefield with new profile
2. Open testcase
3. Selection with mouse drag fom "5"
4. Drag down to *HERE* at outside of frame
5. And hold mouse, do not move mouse
Actual Results:
The highlight of the text is not carried out unless a mouse moves.
Expected Results:
Text highlight should be performed properly.
Regression window:
Works:
http://hg.mozilla.org/mozilla-central/rev/bf0fdec8f43b
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20090913 Minefield/3.7a1pre ID:20090913050738
Fails(drag scroll fails completely):
http://hg.mozilla.org/mozilla-central/rev/912c6ae3b70c
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20090914 Minefield/3.7a1pre ID:20090914045953
Fails:(drag scroll works, however text selection fails)
http://hg.mozilla.org/mozilla-central/rev/41dd493c42c9
Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20090918 Minefield/3.7a1pre ID:20090918042213
Candidates:
Bug 503943 - Need a way to grab mouse events on arbitrary elements (implement setCapture/releaseCapture)
Bug 516991 - Drag selection is broken, drag the selection outside the visible portion the page starts jumping all over the place.
| Reporter | ||
Comment 1•15 years ago
|
||
Updated•15 years ago
|
blocking2.0: --- → ?
Updated•15 years ago
|
Assignee: nobody → enndeakin
blocking2.0: ? → final+
| Assignee | ||
Comment 2•15 years ago
|
||
| Assignee | ||
Comment 3•15 years ago
|
||
Attachment #468810 -
Attachment is obsolete: true
Attachment #469042 -
Flags: review?(matspal)
Comment 4•15 years ago
|
||
Comment on attachment 469042 [details] [diff] [review]
patch with tests
You need to null-check 'frame' before using it.
Currently HandleDrag() is a NOP if null and then we'll
return on the IsAlive test.
(apparently mContent can be null on the first line, see bug 537419)
r=mats with a null-check and early return after the
"mContent = nsnull;" line.
Attachment #469042 -
Flags: review?(matspal) → review+
| Assignee | ||
Comment 5•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•