Bug 578667, text not highlighting when selectiondrag is outside frame, r=mats,a=blocking